src/styles/Blog.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
}
.main header {
  text-align: center;
  padding: 1rem;
  padding-bottom: 2em;
}

.main header menu button {
  margin-top: 5px;
}
.main header menu nav a,
.main footer nav a {
  min-width: 48px;
  min-height: 48px;
  padding: 16px 8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}
.main footer button.contactButton {
  align-self: center;
}
.main footer a {
  text-align: center;
}

.main header menu nav {
  margin-top: 0.5em;
  margin-bottom: 8px;
  display: flex;
}
.main a.logo {
  padding: 0;
  margin-bottom: -12px;
}
.main header menu .socialBar,
.main aside .socialBar,
.main article.resume menu,
.main footer menu,
.main footer nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.main header menu a,
.main article.resume menu a,
.main aside .socialBar a,
.main footer menu a {
  min-width: 48px;
  min-height: 48px;
}
.main .socialBar menu {
  padding-top: 12px;
}
.main header .socialBar svg,
.main article.resume menu svg,
.main aside svg,
.main footer svg {
  height: 56px;
  padding: 6px 9px;
}

.main nav.header {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 100%;
}
.main .content h2,
.main .content p {
  width: 400px;
}
.main .portfolioGrid img.scribe {
  object-fit: contain;
}

.main h1.SEOonly {
  display: none;
  font-family: adobe-handwriting-ernie, sans-serif;
}
.main h1 {
  font-family: adobe-handwriting-ernie, sans-serif;
  font-size: 3.5rem;
  line-height: 1.3em;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 1.75rem;
  text-align: CENTER;
}
.main header.post {
  min-height: 600px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-blend-mode: hard-light;
}
.main h2 {
  font-size: 3rem;
  line-height: 1.3em;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 1.75rem;
  font-family: adobe-handwriting-ernie, sans-serif;
}
.main h3.fancy {
  font-family: adobe-handwriting-ernie, sans-serif;
  font-size: 1.5rem;
  padding-bottom: 0;
  line-height: 1.7em;
}
.main h3 {
  font-size: 1rem;
  padding-left: 0rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
  font-family: "poppins", sans-serif;
}

.main cite {
  font-style: normal;
  font-weight: bold;
  font-size: 1.5rem;
  padding-left: 0rem;
  padding-right: 0.5rem;
  padding-bottom: 0;
  font-family: adobe-handwriting-ernie, sans-serif;
}

.main h4 {
  font-size: 1rem;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0.5rem;
  font-weight: 100;
  font-family: "poppins", sans-serif;
}

.main p,
.main quote,
.main nav {
  font-size: 1rem;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0.2rem;
  font-weight: 300;
  font-family: "poppins", sans-serif;
}

.main button {
  font-size: 0.8rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding: 0.75rem 2.5rem;
  background: rgba(29, 63, 100, 0.04);
  color: white;
  border: white solid 0.1rem;
  border-radius: 2rem;
  min-width: 175px;
  font-family: "poppins", sans-serif;
}

.main .postContent {
  background: white;
  padding: 2em;
}
.main .postContent p,
.main .postContent span,
.main .postContent ol li {
  padding-bottom: 1em !important;
  font-family: "poppins", sans-serif !important;
  color: rgb(29, 63, 100) !important;
  background: unset !important;
}
.main .postContent ol li {
  font-weight: normal !important;
}
.main .postContent p:first-of-type span,
.main .postContent p:last-of-type span {
  font-style: normal !important;
  font-weight: bold !important;
  font-size: 2rem !important;
  padding-left: 0rem !important;
  padding-right: 0.5rem !important;
  padding-bottom: 0 !important;
  font-family: adobe-handwriting-ernie !important;
}
.main .postContent p:last-of-type {
  padding-top: 2em !important;
}
.main div.grid {
  background: white;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 1em;
}
.main div.grid a {
  max-width: 90vw;
  color: rgb(29, 63, 100);
  display: flex;
  flex-direction: row;
  justify-content: left;
  padding-right: 1em;
  margin: 1em;
  border-radius: 1em;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}
.main div.grid a img {
  margin-right: 1em;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  border-radius: 1em 0 0 1em;
  height: 100%;
  object-fit: cover;
}
/* LARGE Mobile to tablet */
@media (min-width: 400px) {
  .main header,
  .main article .inner {
    padding-left: 3rem;
    padding-right: 3em;
    padding-bottom: 3em;
  }
  .main h3 {
    padding-bottom: 1.5rem;
  }
}
@media (min-width: 500px) {
}
@media (min-width: 700px) {
}
@media (min-width: 850px) {
}
@media (max-width: 1000px) {
  .main header {
    padding-bottom: 100px;
  }
  .main footer {
    padding-top: 1em;
  }
}
/* Desktop */
@media (min-width: 1000px) {
  .main div.grid a {
    max-width: 550px;
  }
  .main header {
    text-align: left;
    width: 100vw;
  }
  .main header nav {
    padding-left: 2rem;
    padding-right: 2em;
  }
  .main header nav.header menu {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: nowrap;
  }
  .main h2,
  .main p {
    padding-left: 0;
  }

  .main header .content {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
  .main header .content aside {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }
  .main footer {
    padding: 1em;
  }
}
@media (min-width: 1100px) {
}
@media (max-width: 600px) {
}
@media (min-width: 450px) {
}
@media (min-width: 650px) and (max-width: 950px) {
}
@media (max-width: 350px) {
}

